Spacing fixes
Attempted to fix buttons via reletive tags

--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,7 @@
 }
 
 .button {
+	position: relative;
   color: #2B4051;
   border: solid 2px #2B4051;
   border-radius: 50%;
@@ -21,6 +22,7 @@
 }
 
 .fa {
+	position: relative;
   font-size: 36px;
 }
 
